# curium-rust-actix

./: .gitignore  Cargo.toml  config.prod.yaml  config.yaml
services/: Cargo.toml
services/src/: lib.rs  main.rs  server.rs
services/src/api/: actuator.rs  auth.rs  mod.rs
services/src/api/middleware/: authn.rs  mod.rs
services/src/config/: logging.rs  settings.rs
services/src/domain/: user.rs
services/src/model/: authn.rs  mod.rs  request.rs  response.rs
services/src/service/: authn.rs  mod.rs  registration.rs
